<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"

    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Project0"
    android:background="@color/teal">

    <TextView android:text="@string/mg_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mmm"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        />

    <Button
        style="@style/Project0Button"
        android:layout_below="@+id/mmm"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotifyButton"
        android:onClick="clickButtonAction" />

    <Button
        style="@style/Project0Button"
        android:text="@string/scores_app"
        android:id="@+id/scoresButton"
        android:layout_below="@+id/spotifyButton"
        android:onClick="clickButtonAction" />

    <Button
        style="@style/Project0Button"
        android:text="@string/library_app"
        android:id="@+id/libraryButton"
        android:layout_below="@+id/scoresButton"
        android:onClick="clickButtonAction" />

    <Button
        style="@style/Project0Button"
        android:text="@string/build_it_bigger"
        android:id="@+id/buildBiggerButton"
        android:layout_below="@+id/libraryButton"
        android:layout_alignLeft="@+id/libraryButton"
        android:layout_alignStart="@+id/libraryButton"
        android:onClick="clickButtonAction" />

    <Button
        style="@style/Project0Button"
        android:text="@string/bacon_reader"
        android:id="@+id/baconButton"
        android:layout_below="@+id/buildBiggerButton"
        android:layout_alignLeft="@+id/libraryButton"
        android:onClick="clickButtonAction" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app"
        android:id="@+id/capstoneButton"
        android:background="@color/red2"
        android:layout_below="@+id/baconButton"
        android:layout_alignLeft="@+id/libraryButton"
        android:layout_marginBottom="10dp"
        android:width="200dp"
        android:textColor="@color/white"
        android:onClick="clickButtonAction" />

</RelativeLayout>
</ScrollView>
